RC v1.1.0 Add names and password fields
This fullfills the new requirements of the challenge (they became new
after I read it carefully).
