# docs/swagger.yaml
@@ -26,14 +26,41 @@ definitions:
         example: john@colega.eu
         format: email
         type: string
+      first_name:
+        description: FirstName is the first name of the user
+        example: 'John '
+        type: string
       id:
         description: ID is generated by the service when the user is created. It is a valid UUID.
         example: c3e11b46-109c-11eb-adc1-0242ac120002
         format: uuid
         type: string
+      last_name:
+        description: LastName is the first name of the user
+        example: Doe
+        type: string
       name:
-        description: Name is the name of the user.
-        example: John Doe
+        description: Name is the nickname of the user.
+        example: john_doe87
+        type: string
+      password:
+        description: |-
+          Password is the password of the user to be created or updated
+          This field should be filled only on the create/update requests, and it will come empty on any service responses
+          Password should be at least 8 characters long
+        format: password
+        type: string
+      password_hash:
+        description: |-
+          PasswordHash is the SHA-256 hash of concatenation of `Password` and `PasswordHash`.
+          PasswordHash is set by the service and shouldn't be sent on Create or Update requests.
+        example: 5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8
+        type: string
+      password_salt:
+        description: |-
+          PasswordSalt is the unique random salt for this user.
+          PasswordSalt is set by the service and shouldn't be sent on Create or Update requests.
+        example: 5f4dcc3b5aa765d61d8327deb882cf99
         type: string
       updated_at:
         description: |-
@@ -59,7 +86,9 @@ info:
 paths:
   /users:
     get:
-      description: List users, can be filtered by country code.
+      description: |-
+        List users, can be filtered by country code.
+        This operation does not return the PasswordHash and PasswordSalt fields for security reasons.
       operationId: list-users
       parameters:
       - description: filter by country code
